--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "/"
-title = "Tobeva Software, LLC"
+title = "Tobeva Software"
 description = "Tobeva Software, LLC software consulting, design, development."
 
 enableRobotsTXT = true
@@ -48,7 +48,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "UA-00000000-0"
+id = "UA-163328943-1"
 
 [markup]
   [markup.goldmark]
@@ -83,15 +83,16 @@ version = "0.0"
 url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/google/docsy-example"
+# github_repo = "https://github.com/google/docsy-example"
+
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/google/docsy"
+# github_project_repo = "https://github.com/google/docsy"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
-gcs_engine_id = "011737558837375720776:fsdu1nryfng"
+# gcs_engine_id = "015200115249720338329:2gxiuo7hfwe"
 
 # Enable Algolia DocSearch
 algolia_docsearch = false
