--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ theme = ["docsy"]
 enableGitInfo = false
 
 # Language settings
-contentDir = "content/en"
+contentDir = "content"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 # Useful when translating.
