--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "http://tobeva.com/"
 title = "Tobeva Software"
 description = "Tobeva Software, LLC software consulting, design, development."
 
@@ -62,7 +62,7 @@ copyright = "Tobeva Software, LLC"
 # privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
-# images = ["images/project-illustration.png"]
+images = ["about/river.jpg"]
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
@@ -100,6 +100,8 @@ algolia_docsearch = false
 # Enable Lunr.js offline search
 offlineSearch = false
 
+description = "Tobeva Software"
+
 # User interface configuration
 [params.ui]
 # Enable to show the side bar menu in its compact state.
@@ -124,3 +126,7 @@ yes = 'Glad to hear it! Please <a href="https://github.com/USERNAME/REPOSITORY/i
 no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
 
 [params.links]
+
+[Social]
+twitter = "pbwinston"
+
